--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,15 +19,15 @@ services:
     container_name: watchtower
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-    environment:
-        # - WATCHTOWER_NOTIFICATIONS=email
-        # - WATCHTOWER_NOTIFICATION_EMAIL_FROM=info@eha.ng
-        # - WATCHTOWER_NOTIFICATION_EMAIL_TO=ohiageorge@gmail.com
-        # - WATCHTOWER_NOTIFICATION_EMAIL_SERVER=email-smtp.eu-west-1.amazonaws.com
-        # - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_USER=AKIAVUOS7AJ6YV6XPIHF
-        # - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PASSWORD=BCLw8NKz33WAkkhFvrE1qI3XhG1PrFklImwuxrLNWQPL
-        # - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PORT=587
-        # - WATCHTOWER_NOTIFICATION_EMAIL_DELAY=2
+    # environment:
+    #     # - WATCHTOWER_NOTIFICATIONS=email
+    #     # - WATCHTOWER_NOTIFICATION_EMAIL_FROM=info@eha.ng
+    #     # - WATCHTOWER_NOTIFICATION_EMAIL_TO=ohiageorge@gmail.com
+    #     # - WATCHTOWER_NOTIFICATION_EMAIL_SERVER=email-smtp.eu-west-1.amazonaws.com
+    #     # - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_USER=AKIAVUOS7AJ6YV6XPIHF
+    #     # - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PASSWORD=BCLw8NKz33WAkkhFvrE1qI3XhG1PrFklImwuxrLNWQPL
+    #     # - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PORT=587
+    #     # - WATCHTOWER_NOTIFICATION_EMAIL_DELAY=2
     command: --interval 30 etdp-qa
   #   networks:
   #     - watchtower
