Fix smtp mail from

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
         - WATCHTOWER_NOTIFICATIONS=email
-        # - WATCHTOWER_NOTIFICATION_EMAIL_FROM=info@qisolutions.co.za
+        - WATCHTOWER_NOTIFICATION_EMAIL_FROM=support@qisolutions.co.za
         - WATCHTOWER_NOTIFICATION_EMAIL_TO=ohiageorge@gmail.com
         - WATCHTOWER_NOTIFICATION_EMAIL_SERVER=mail.smtp2go.com
         - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_USER=QISolutions
